# TDT2019VISION

./: CMakeLists.txt  README.md
HikVision/demo/64/GrabImage/: CMakeLists.txt
config/: cam_internal.yaml  config.yaml
include/: armordetect.h  camera.h  cvui.h  debug.h  energybuff.h  kalman.h  lob.h  log.h  macro.h  predict.h  readparameter.h  targetresolver.h  tnet.h  usart.h
model/: TDT_Armor-2.0.params  TDT_Armor-3.0.params  Tnet.json  Tnet.params  Tnet1-1.params  knn(7).xml  knn(flowwater3).xml  knn(r3).xml  svm_flowwater.xml
sdk/genicam/xml/GenApi/: GenApiSchema_Version_1_0_Runtime.xsd  GenApiSchema_Version_1_1_Runtime.xsd  GenApi_Impl_cpp.xsl  GenApi_Impl_h.xsl
sdk/include/: DxImageProc.h
sdk/lib/: libdximageproc.so.1.0.1602.8161  libgxu3vtl.so.1.0.1802.8051
src/: armordetect.cpp  camera.cpp  debug.cpp  energybuff.cpp  lob.cpp  log.cpp  macro.cpp  macro_tools.cpp  main.cpp  predict_energybuff.cpp  predict_robot.cpp  readparameter.cpp  targetresolver.cpp  tnet.cpp  usart.cpp
